[package]
name = "ansi_term_buf"
version = "0.1.0"
edition = "2024"
description = "Minimal ANSI terminal emulator that renders into a string"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crumblingstatue/ansi_term_buf/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.27"
